--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ Thumbs.db
 .env
 .env.local
 
+# Config files with sensitive data
+config.json
+config.local.json
+
 # Build output
 main
 go-viewset
